@@ -1,12 +1,9 @@
 package az.cybernet.internship.dictionary.mapper;
 
 import az.cybernet.internship.dictionary.entity.DictionaryCategory;
-import az.cybernet.internship.dictionary.entity.DictionaryItem;
 import az.cybernet.internship.dictionary.model.request.CategoryRequest;
 import az.cybernet.internship.dictionary.model.response.CategoryResponse;
 import org.apache.commons.lang3.StringUtils;
-
-import static az.cybernet.internship.dictionary.mapper.ItemMapper.ITEM_MAPPER;
 
 public enum CategoryMapper {
     CATEGORY_MAPPER;
@@ -28,13 +25,11 @@ public enum CategoryMapper {
                 .createdAt(category.getCreatedAt())
                 .updatedAt(category.getUpdatedAt())
                 .isActive(category.getIsActive())
-                .items(
-                        category.getItems()
-                                .stream()
-                                .filter(DictionaryItem::getIsActive)
-                                .map(ITEM_MAPPER::buildItemResponse)
-                                .toList()
-                )
+//                .items(
+//                        category.getItems().stream()
+//                                .map(ITEM_MAPPER::buildItemResponse)
+//                                .collect(Collectors.toList())
+//                )
                 .build();
     }
 
